# constructs

c/: Makefile  file.c  file.h  main.c  misra.c
c++/: CMakeLists.txt  Makefile  README.md  main.cpp
c++/tests/: CMakeLists.txt  main_test.cpp
golang/: .main.go.swp  Makefile  README.md  go.mod  main.go  main_test.go
rust/src/: .main.rs.swp  main.rs
